minor improvements. STRETCH: Sticky nav top spacing issues

--- a/great-idea/css/index.css
+++ b/great-idea/css/index.css
@@ -59,11 +59,9 @@ h1, h2, h3, h4, h5 {
 }
 
 .container{
-	max-width: 1200px;
 	width: 100%;
 	font-size: 16px;
 	margin: 20px auto;
-	border: 2px solid gray;
 }
 .navbar-with-logo{
 	width:100%;
@@ -71,12 +69,26 @@ h1, h2, h3, h4, h5 {
 	display: inline-block;
 	padding-bottom:20px;
 	padding-left:50px;
+	background-color: white;
+
 }
 .nav{
 	padding: 20px;
 	width: 120px;
 	height: 30px;
 	margin:20px;
+	padding: 40px;
+}
+
+.sticky{
+	position: fixed;
+	top: 0;
+	width: 100%;
+
+}
+
+.sticky + .content {
+	padding-top: 60px;
 }
 .services{
 	margin-left:50px;
@@ -102,15 +114,15 @@ a{
 	justify-content: space-around;
 	align-items:center;
 	text-align:center;
-	width:90%;
-	height:360px;
-	margin: 20px auto;
+	width:100%;
+	height:auto;
+	margin: 20px;
+	padding: 40px;
 	border-bottom: 1px solid gray;
 }
 .cta-text{
 	display:flex;
 	flex-direction:column;
-	width:50%;
 	font-size: 4rem;
 	height:360px;
 	padding:40px;
